--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,44 @@
-.App {
-  text-align: center;
+html,
+body,
+#root {
+  height: 100%;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.app-container {
+  align-items: center;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  height: 100%;
 }
 
-.App-link {
-  color: #61dafb;
+.text-input {
+  font-size: 20px;
+  height: 35px;
+  margin-top: 175px;
+  width: 250px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.autocomplete-container {
+  border-color: black;
+  border-style: solid;
+  border-width: 1px;
+  margin-top: 2px;
+  max-height: 245px;
+  max-width: 260px;
+  overflow: scroll;
+}
+
+.autocomplete-value {
+  font-size: 22px;
+  min-height: 37px;
+  min-width: 250px;
+  padding: 5px;
+}
+
+.selected-value {
+  background-color: gray;
+  font-size: 22px;
+  font-weight: 700;
+  min-height: 37px;
+  min-width: 250px;
+  padding: 5px;
 }
